--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
         </div>
         <div>
           <a href="pages/contacto.html">
-            <button class="btn btn-success pointer ms-3">
-              <i class="bi bi-envelope-fill"></i> Contáctenos
-            </button>
-          </a>
+  <button class="btn btn-success pointer ms-3 contacto-btn">
+    <i class="bi bi-envelope-fill"></i>
+    <span class="texto-contacto">Contáctenos</span>
+  </button>
+</a>
+
         </div>
       </div>
 
