--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,14 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Auto al Día - Noticias, lanzamientos y novedades sobre las mejores marcas automotrices: Ford, Chevrolet, Toyota, Suzuki y más."
     />
     <meta
       name="keywords"
-      content="autos, autos nuevos, noticias automotrices, Ford, Chevrolet, Toyota, Suzuki, Auto al Día"
     />
     <meta name="author" content="Mariano Sebastian Balianelli" />
-    <meta name="copyright" content="Auto al Día 2025" />
+    <meta name="copyright" content="VENICE IND." />
     <title>C O N T A C T O</title>
     <link rel="icon" href="../img/ruedaicono.png" type="image/png" />
     <link
