--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Carrito de Venice IND.</title>
+    <title>Venice IND.</title>
     <link rel="icon" href="img/logo.png" type="image/png" />
     <link rel="stylesheet" href="css/styles.css" />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -21,12 +21,11 @@
         </div>
         <div>
           <a href="pages/contacto.html">
-  <button class="btn btn-success pointer ms-3 contacto-btn">
-    <i class="bi bi-envelope-fill"></i>
-    <span class="texto-contacto">Contáctenos</span>
-  </button>
-</a>
-
+            <button class="btn btn-success pointer ms-3 contacto-btn">
+              <i class="bi bi-envelope-fill"></i>
+              <span class="texto-contacto">Contáctenos</span>
+            </button>
+          </a>
         </div>
       </div>
 
