--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -12,7 +12,7 @@
     <meta name="author" content="Mariano Sebastian Balianelli" />
     <meta name="copyright" content="VENICE IND." />
     <title>C O N T A C T O</title>
-    <link rel="icon" href="../img/ruedaicono.png" type="image/png" />
+<link rel="icon" href="../img/logo.png" type="image/png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
       rel="stylesheet"
